Fix a bug on mobile backpack not showing when empty

--- a/rando/static/css/objects/result.less
+++ b/rando/static/css/objects/result.less
@@ -45,6 +45,15 @@ width: 32%;
   color:#968d7f;
 }
 
+#backpack {
+  overflow: hidden;
+  min-height: 30px;
+
+  .tab-content-empty {
+    margin: 15px 0;
+  }
+}
+
 .search-tools {
   position: absolute;
   right: 7px;
