--- a/rando/static/css/style.less
+++ b/rando/static/css/style.less
@@ -1414,6 +1414,7 @@ p.teaser {
   #result-backpack-content {
     max-height: 154px;
     height: auto;
+    overflow: hidden;
     right: 0;
     bottom: auto;
     top: 48px;
